spade-tests/src/snapshots/spade_tests__linear_check__unused_resource_causes_error.snap
---
source: spade-tests/src/linear_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused resource
  ┌─ testinput:1:10
  │
1 │ entity x(resource: &mut bool) -> bool {
  │          ^^^^^^^^ resource is unused
  │
  = note: resource is a &mut value which must be set


